--- a/pom.xml
+++ b/pom.xml
@@ -77,9 +77,9 @@
 
 	<distributionManagement>
     		<repository>
-        		<id>central</id>
-        		<name>derliodev-artifactory-primary-0-releases</name>
-        		<url>https://derliodev.jfrog.io/artifactory/default-libs-release</url>
+        		<id>snapshots</id>
+        		<name>derliodev-artifactory-primary-0-snapshots</name>
+        		<url>https://derliodev.jfrog.io/artifactory/eva-libs-snapshot</url>
     		</repository>
 	</distributionManagement>
 </project>
